input field on mobile resolution fixed

--- a/src/components/cryptoContainer.css
+++ b/src/components/cryptoContainer.css
@@ -75,7 +75,6 @@ input[type="text"] {
   background-repeat: no-repeat;
   padding: 12px 20px 12px 30px;
   transition: width 0.4s ease-in-out;
-  margin-left: 2%;
   margin-bottom: 2%;
 }
 
@@ -100,5 +99,8 @@ input[type="text"]:focus {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+  }
+  input[type="text"]:focus {
+    width: 80%;
   }
 }
